--- a/css/tooplate-style.css
+++ b/css/tooplate-style.css
@@ -275,7 +275,7 @@ p {
 =======================*/
 
 .sixth-section {
-	background-image: url(../img/sixth-section-bg.png);
+	background-image: url(../img/sixth-section-bg.jpg);
 	background-size: cover;
 	width: 100%;
 	background-repeat: no-repeat;
